[metadata]
name = ufs_diags
version = 0.0.1
description = "Unified Forecast System Diagnostics package."
long_description = file: README.md
long_description_content_type = text/markdown
author = "Henry R. Winterbottom"
author_email = "henry.winterbottom@noaa.gov"
home_page = https://github.com/HenryWinterbottom-NOAA/ufs_diags
license = "License :: OSI Approved :: LGPL-2.0 License"
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: LGPL-2.0 License
  Programming Language :: Python :: >=3.5
  Topic :: Software Development :: Libraries :: Python Module

[options]
python_requires = >= 3.5
setup_requires = setuptools
install_requires =
  wrf-python==1.3.4.1
  metpy
  pyspharm==1.0.9
  geopy==2.3.0
  ufs-pyutils@https://www.github.com/HenryWinterbottom-NOAA/ufs_pyutils@develop


